--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,66 +12,83 @@ FetchContent_Declare(
 
 FetchContent_MakeAvailable(Catch2)
 
-# Generate PTX from CUDA kernels at compile time
-set(PTX_OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/ptx")
-file(MAKE_DIRECTORY ${PTX_OUTPUT_DIR})
-
-# Generate PTX from cuda_kernels.cu
-set(CUDA_KERNEL_FILE "${CMAKE_CURRENT_SOURCE_DIR}/cuda_kernels.cu")
-set(PTX_OUTPUT_FILE "${PTX_OUTPUT_DIR}/cuda_kernels.ptx")
-
-# Get the first detected CUDA architecture for PTX generation
-list(GET CMAKE_CUDA_ARCHITECTURES 0 PTX_ARCH)
-
-# Custom command to generate PTX
-add_custom_command(
-    OUTPUT ${PTX_OUTPUT_FILE}
-    COMMAND ${CMAKE_CUDA_COMPILER} -ptx -arch=sm_${PTX_ARCH}
-            ${CUDA_KERNEL_FILE} -o ${PTX_OUTPUT_FILE}
-            -I${CMAKE_SOURCE_DIR}/include
-    DEPENDS ${CUDA_KERNEL_FILE}
-    COMMENT "Generating PTX from CUDA kernels for architecture sm_${PTX_ARCH}"
-)
-
-# Create a target for PTX generation
-add_custom_target(generate_ptx DEPENDS ${PTX_OUTPUT_FILE})
-
-# Test kernels
-add_library(test_kernels OBJECT
-    cuda_kernels.cu
-)
-
-set_target_properties(test_kernels PROPERTIES
-    CUDA_SEPARABLE_COMPILATION ON
-    POSITION_INDEPENDENT_CODE ON
-)
+# Set up backend-specific test configuration
+if(USE_CUDA)
+    # Generate PTX from CUDA kernels at compile time
+    set(PTX_OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/ptx")
+    file(MAKE_DIRECTORY ${PTX_OUTPUT_DIR})
+    
+    # Generate PTX from cuda_kernels.cu
+    set(CUDA_KERNEL_FILE "${CMAKE_CURRENT_SOURCE_DIR}/cuda_kernels.cu")
+    set(PTX_OUTPUT_FILE "${PTX_OUTPUT_DIR}/cuda_kernels.ptx")
+    
+    # Get the first detected CUDA architecture for PTX generation
+    list(GET CMAKE_CUDA_ARCHITECTURES 0 PTX_ARCH)
+    
+    # Custom command to generate PTX
+    add_custom_command(
+        OUTPUT ${PTX_OUTPUT_FILE}
+        COMMAND ${CMAKE_CUDA_COMPILER} -ptx -arch=sm_${PTX_ARCH}
+                ${CUDA_KERNEL_FILE} -o ${PTX_OUTPUT_FILE}
+                -I${CMAKE_SOURCE_DIR}/include
+        DEPENDS ${CUDA_KERNEL_FILE}
+        COMMENT "Generating PTX from CUDA kernels for architecture sm_${PTX_ARCH}"
+    )
+    
+    # Create a target for PTX generation
+    add_custom_target(generate_ptx DEPENDS ${PTX_OUTPUT_FILE})
+    
+    # Test kernels
+    add_library(test_kernels OBJECT
+        cuda_kernels.cu
+    )
+    
+    set_target_properties(test_kernels PROPERTIES
+        CUDA_SEPARABLE_COMPILATION ON
+        POSITION_INDEPENDENT_CODE ON
+    )
+    
+    # Define test configuration
+    set(TEST_DEFINITIONS 
+        PTX_FILE_PATH="${PTX_OUTPUT_FILE}"
+        CUDA_ARCH_SM=${PTX_ARCH}
+        USE_CUDA_BACKEND
+    )
+    
+    set(TEST_KERNEL_OBJECTS $<TARGET_OBJECTS:test_kernels>)
+    set(TEST_PTX_DEPENDENCY generate_ptx)
+    
+elseif(USE_OPENCL)
+    # OpenCL test configuration
+    set(TEST_DEFINITIONS
+        USE_OPENCL_BACKEND
+    )
+    
+    set(TEST_KERNEL_OBJECTS "")
+    set(TEST_PTX_DEPENDENCY "")
+endif()
 
 # Performance tests (GPU only)
 add_executable(test_performance
     test_performance.cpp
-    $<TARGET_OBJECTS:test_kernels>
+    ${TEST_KERNEL_OBJECTS}
 )
-
-
-# Add dependency on PTX generation and pass PTX path and architecture as compile definitions
-add_dependencies(test_performance generate_ptx)
-
 
 target_link_libraries(test_performance 
     ebpf_gpu_processor
     Catch2::Catch2WithMain
 )
 
-add_dependencies(test_performance generate_ptx)
-target_compile_definitions(test_performance PRIVATE 
-    PTX_FILE_PATH="${PTX_OUTPUT_FILE}"
-    CUDA_ARCH_SM=${PTX_ARCH}
-)
+if(USE_CUDA)
+    add_dependencies(test_performance ${TEST_PTX_DEPENDENCY})
+endif()
+
+target_compile_definitions(test_performance PRIVATE ${TEST_DEFINITIONS})
 
 # CPU Performance tests (benchmarks)
 add_executable(test_performance_cpu
     test_performance_cpu.cpp
-    $<TARGET_OBJECTS:test_kernels>
+    ${TEST_KERNEL_OBJECTS}
 )
 
 target_link_libraries(test_performance_cpu 
@@ -79,16 +96,16 @@ target_link_libraries(test_performance_cpu
     Catch2::Catch2WithMain
 )
 
-add_dependencies(test_performance_cpu generate_ptx)
-target_compile_definitions(test_performance_cpu PRIVATE 
-    PTX_FILE_PATH="${PTX_OUTPUT_FILE}"
-    CUDA_ARCH_SM=${PTX_ARCH}
-)
+if(USE_CUDA)
+    add_dependencies(test_performance_cpu ${TEST_PTX_DEPENDENCY})
+endif()
+
+target_compile_definitions(test_performance_cpu PRIVATE ${TEST_DEFINITIONS})
 
 # Integration tests
 add_executable(test_integration
     test_integration.cpp
-    $<TARGET_OBJECTS:test_kernels>
+    ${TEST_KERNEL_OBJECTS}
 )
 
 target_link_libraries(test_integration 
@@ -96,13 +113,35 @@ target_link_libraries(test_integration
     Catch2::Catch2WithMain
 )
 
-add_dependencies(test_integration generate_ptx)
-target_compile_definitions(test_integration PRIVATE 
-    PTX_FILE_PATH="${PTX_OUTPUT_FILE}"
-    CUDA_ARCH_SM=${PTX_ARCH}
+if(USE_CUDA)
+    add_dependencies(test_integration ${TEST_PTX_DEPENDENCY})
+endif()
+
+target_compile_definitions(test_integration PRIVATE ${TEST_DEFINITIONS})
+
+# Device manager tests
+add_executable(test_device_manager
+    test_device_manager.cpp
 )
 
-# Legacy C API tests removed - using modern C++ API only
+target_link_libraries(test_device_manager
+    ebpf_gpu_processor
+    Catch2::Catch2WithMain
+)
+
+target_compile_definitions(test_device_manager PRIVATE ${TEST_DEFINITIONS})
+
+# Kernel loader tests
+add_executable(test_kernel_loader
+    test_kernel_loader.cpp
+)
+
+target_link_libraries(test_kernel_loader
+    ebpf_gpu_processor
+    Catch2::Catch2WithMain
+)
+
+target_compile_definitions(test_kernel_loader PRIVATE ${TEST_DEFINITIONS})
 
 # Register tests with CTest
 include(CTest)
@@ -114,6 +153,8 @@ if(TARGET Catch2::Catch2)
     
     # Regular tests (exclude benchmark tests)
     catch_discover_tests(test_integration)
+    catch_discover_tests(test_device_manager)
+    catch_discover_tests(test_kernel_loader)
     
     # Performance tests without benchmarks (exclude [benchmark] tag)
     catch_discover_tests(test_performance 
