--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,6 +19,13 @@ configure_file(
     COPYONLY
 )
 
+# Copy test OpenCL file to build directory
+configure_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_opencl.cl
+    ${CMAKE_CURRENT_BINARY_DIR}/test_opencl.cl
+    COPYONLY
+)
+
 # Set up backend-specific test configuration
 if(USE_CUDA)
     # Generate PTX from CUDA kernels at compile time
